--- a/customers.management.web/wwwroot/Index.html
+++ b/customers.management.web/wwwroot/Index.html
@@ -3,54 +3,42 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Customers Management</title>
-
+	<!--Styles-->
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-		  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-		  crossorigin="anonymous" />
-	<link rel="stylesheet"
-		  href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.5/angular-material.min.css" />
+	      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+	      crossorigin="anonymous" />
+	<link href="css/angular-material.min.css" rel="stylesheet" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<link href="css/paper-dashboard.css" rel="stylesheet" />
 	<link href="css/common.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-<header>
-	<div ng-include="'views/header.html'"></div>
-</header>
+	<header>
+		<div ng-include="'views/header.html'"></div>
+	</header>
 
-<div ng-view=""></div>
-<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-        crossorigin="anonymous"></script>
-<script src="scripts/angular.js"></script>
-<script src="scripts/angular-route.js"></script>
-<script src="scripts/bootstrap.min.js"></script>
-<script src="scripts/angular-animate.min.js"></script>
-<script src="scripts/angular-aria.min.js"></script>
-<script src="scripts/angular-messages.min.js"></script>
-<script src="scripts/angular-resource.js"></script>
-<!-- Angular Material Library -->
-<script src="scripts/angular-material.min.js"></script>
-<!-- App scripts -->
-<script src="scripts/app.js"></script>
-<script src="scripts/route.js"></script>
-<script src="scripts/controllers/generalController.js"></script>
-<script src="scripts/controllers/addCustomerController.js"></script>
-<script src="scripts/controllers/customerEditController.js"></script>
-<script src="scripts/controllers/addContactController.js"></script>
-<script src="scripts/controllers/contactEditController.js"></script>
-<script src="scripts/controllers/departmentController.js"></script>
-<script src="scripts/controllers/addDepartmentController.js"></script>
-<script src="scripts/controllers/departmentEditController.js"></script>
-<script src="scripts/controllers/userController.js"></script>
-<script src="scripts/controllers/addUserController.js"></script>
-<script src="scripts/controllers/userEditController.js"></script>
-<script src="scripts/controllers/loginController.js"></script>
-<script src="scripts/controllers/mainController.js"></script>
-<script src="scripts/services/customerService.js"></script>
-<script src="scripts/services/loginService.js"></script>
-<script src="scripts/services/accountService.js"></script>
-<script src="scripts/services/customerStorage.js"></script>
+	<div ng-view=""></div>
+	<!--Scripts-->
+	<script src="scripts/jquery-3.2.1.js"></script>
+	<script src="scripts/angular.js"></script>
+	<script src="scripts/angular-route.js"></script>
+	<script src="scripts/bootstrap.min.js"></script>
+	<script src="scripts/angular-animate.min.js"></script>
+	<script src="scripts/angular-aria.min.js"></script>
+	<script src="scripts/angular-messages.min.js"></script>
+	<script src="scripts/angular-resource.js"></script>
+	<!-- Angular Material Library -->
+	<script src="scripts/angular-material.min.js"></script>
+	<!-- App scripts -->
+	<script src="scripts/app.js"></script>
+	<script src="scripts/route.js"></script>
+	<script src="scripts/controllers/loginController.js"></script>
+	<script src="scripts/controllers/userPageController.js"></script>
+	<script src="scripts/controllers/adminPageController.js"></script>
+	<script src="scripts/controllers/mainController.js"></script>
+	<script src="scripts/services/loginService.js"></script>
+	<script src="scripts/services/accountService.js"></script>
 
 </body>
 </html>
