--- a/customers.management.web/wwwroot/Index.html
+++ b/customers.management.web/wwwroot/Index.html
@@ -36,6 +36,7 @@
 	<script src="scripts/controllers/loginController.js"></script>
 	<script src="scripts/controllers/userPageController.js"></script>
 	<script src="scripts/controllers/adminPageController.js"></script>
+	<script src="scripts/controllers/addCustomerDetailsController.js"></script>
 	<script src="scripts/controllers/mainController.js"></script>
 	<script src="scripts/services/loginService.js"></script>
 	<script src="scripts/services/accountService.js"></script>
